--- a/projectC.html
+++ b/projectC.html
@@ -24,11 +24,13 @@
 	-->
 		<div id='Mouse'> Mouse Drag totals (CVV coords) </div>
 		<button type="button" onClick='clearDrag()'>Clear</button>
+    <button type="button" onClick=''>Move left/right</button>
 
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
     <script src="../lib/cuon-utils.js"></script>
     <script src="../lib/cuon-matrix.js"></script>
+    <script src="../lib/cuon-matrix-mod.js"></script>
 		<script src="materials_Ayerdi.js"></script>
 		<script src="lights-JT.js"></script>
     <script src="projectC.js"></script>
