3 objects and diff material

--- a/projectC.html
+++ b/projectC.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>JT: Second Light(Per fragment)</title>
+    <title>ProjectC</title>
   </head>
 
   <body onload="main()">
@@ -24,7 +24,7 @@
 	-->
 		<div id='Mouse'> Mouse Drag totals (CVV coords) </div>
 		<button type="button" onClick='clearDrag()'>Clear</button>
-    <button type="button" onClick=''>Move left/right</button>
+    <p>Press Z/z to zoom in and X/x to zoom out</p>
 
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
