--- a/projectC.html
+++ b/projectC.html
@@ -25,6 +25,24 @@
 		<div id='Mouse'> Mouse Drag totals (CVV coords) </div>
 		<button type="button" onClick='clearDrag()'>Clear</button>
     <p>Press Z/z to zoom in and X/x to zoom out</p>
+    <p>Light Source 1</p>
+    <button type="button" onClick='lightSwitch()'>On/Off</button>
+    <br>
+    <button type="button" onClick='ambientAddR()'>Ambinent: Add R </button>
+    <button type="button" onClick='ambientAddG()'>Ambinent: Add G </button>
+    <button type="button" onClick='ambientAddB()'>Ambinent: Add B </button>
+    <button type="button" onClick='diffuseAddR()'>Diffuse: Add R </button>
+    <button type="button" onClick='diffuseAddG()'>Diffuse: Add G </button>
+    <button type="button" onClick='diffuseAddB()'>Diffuse: Add B </button>
+    <button type="button" onClick='specularAddR()'>Specular: Add R </button>
+    <button type="button" onClick='specularAddG()'>Specular: Add G </button>
+    <button type="button" onClick='specularAddB()'>Specular: Add B </button>
+
+    <br>
+    <p>Light Source 2</p>
+    <button type="button" onClick='lightSwitch1()'>On/Off</button>
+    <br>
+
 
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
